# telegram-recovery-tool

./: README.md  backup.py  example.py  main.py  pyproject.toml  recover.py  requeriments.txt  telegram.py
src/telegram_recovery_tool/: main.py  telegram.py
